[gd_scene load_steps=9 format=3 uid="uid://cy6btuyvcvavt"]

[ext_resource type="Texture2D" uid="uid://r0rtitgurk4q" path="res://New Piskel (32).png" id="1_25s3u"]
[ext_resource type="Script" path="res://projectile_enemy.gd" id="1_yqn0v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2552d"]
radius = 16.0312

[sub_resource type="Animation" id="Animation_x83c7"]
resource_name = "attacking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_v1bl0"]
resource_name = "chillin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hv3qy"]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_hpiqp"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t3o47"]
_data = {
"attacking": SubResource("Animation_x83c7"),
"chillin": SubResource("Animation_v1bl0"),
"dying": SubResource("Animation_hv3qy"),
"hit": SubResource("Animation_hpiqp")
}

[node name="projectile_enemy" type="CharacterBody2D"]
collision_layer = 524288
collision_mask = 524288
script = ExtResource("1_yqn0v")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-12, -12, -12, -10, -11, -10, -11, -8, -10, -8, -10, -6, -9, -6, -9, -6, -9, -5, -8, -5, -8, -3, -9, -3, -9, 2, -8, 2, -8, 4, -7, 4, -7, 5, -9, 5, -9, 8, -10, 8, -10, 13, -9, 13, -9, 14, -8, 14, -8, 15, -7, 15, -7, 16, -4, 16, -4, 15, -3, 15, -3, 13, -4, 13, -4, 12, -5, 12, -5, 10, -4, 10, -3, 10, -3, 9, -2, 9, -2, 8, 2, 8, 2, 9, 3, 9, 3, 10, 5, 10, 5, 11, 5, 12, 4, 12, 4, 13, 3, 13, 3, 15, 4, 15, 4, 16, 7, 16, 7, 15, 8, 15, 8, 14, 9, 14, 9, 13, 10, 13, 10, 8, 9, 8, 9, 5, 7, 5, 7, 2, 8, 2, 8, -3, 7, -3, 7, -5, 8, -5, 8, -6, 9, -6, 9, -8, 10, -8, 10, -10, 11, -10, 11, -12, 9, -12, 9, -11, 7, -11, 7, -10, 5, -10, 5, -9, 4, -9, 4, -8, 2, -8, 2, -9, -3, -9, -3, -8, -5, -8, -5, -9, -6, -9, -6, -10, -8, -10, -8, -11, -10, -11, -10, -12)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_25s3u")
hframes = 2
vframes = 2
frame = 1

[node name="mele_hit_box" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="mele_hit_box"]
shape = SubResource("CircleShape2D_2552d")

[node name="projectile_hit_box" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="projectile_hit_box"]
shape = SubResource("CircleShape2D_2552d")

[node name="shot_cool_down" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t3o47")
}

[node name="dying" type="Timer" parent="."]

[connection signal="area_entered" from="mele_hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="mele_hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="area_entered" from="projectile_hit_box" to="." method="_on_projectile_hit_box_area_entered"]
[connection signal="area_entered" from="projectile_hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="projectile_hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="shot_cool_down" to="." method="_on_shot_cool_down_timeout"]
[connection signal="timeout" from="dying" to="." method="_on_dying_timeout"]
